trying to fix the second background image to work on iphone 4 now back to screenshotted image, may have been a cache issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -309,7 +309,7 @@ a.nav-link:hover {
   height: 350px;
   background-position: center;
   background-size: cover;
-  background-image: url(../assets/woods-wallpaper.jpg);
+  background-image: url(../assets/blurPC.jpg);
   background-attachment: fixed;
   color: #fff;
 }
